schema/testdata/validation_permission_RHS_identity_comparison/schema.keel
model User {
fields {
    identity Identity
}
}

model UserProject {
fields {
    user User
    project Project
}
}

model Project {
fields {
    users UserProject[]
}

@permission(
    expression: project.users.user.identity == ctx.identity,
    actions: [create]
)
}